# sparkml-base-classes

./: README.rst  pyproject.toml  release.sh  run_CI_checks.sh  sparkml_base_classes.py
notebooks/: 00-introduction.ipynb  01-data_transformations_in_ml.ipynb  02-scikit_learn_pipelines.ipynb  03-sparkml_introduction.ipynb  04-custom_sparkml.ipynb
sparkml_base_classes/: __init__.py
src/sparkml_base_classes/: __init__.py  sparkml_base_classes.py
tests/: package_version_test.py  sparkml_base_classes_test.py
