[tool.poetry]
name = "sparkml-base-classes"
version = "0.1.6"
description = "SparkML base classes for Transformers and Estimators"
authors = ["Rodrigo Agundez <rragundez@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-spark = "^0.6.0"
chispa = "^0.9.2"
black = "^22.10.0"
pylint = "^2.15.8"
numpy = "^1.23.5"
pyspark = "^3.3.1"
toml = "^0.10.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint.messages_control]
max-line-length = 100
ignored-modules = "pyspark"
disable = [
  "unused-argument",
  "too-few-public-methods",
  "missing-module-docstring",
]
